Break up the gulp build into separate scripts, add some of the CSS dependencies (bootstrap, bootswatch)

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "bootstrap": "^3.3.5",
+    "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
     "del": "^2.0.2",
     "express": "^4.13.3",
+    "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-newer": "^0.5.1",
     "gulp-rename": "^1.2.2",
