--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "babelify": "^6.3.0",
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
@@ -24,12 +25,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
-    "reactify": "^1.1.1",
+    "react-bootstrap": "^0.26.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   }
