--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
+    "react-router": "^1.0.0-rc1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   }
