--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
     "del": "^2.0.2",
+    "eventemitter3": "^1.1.1",
     "express": "^4.13.3",
+    "flux": "^2.1.1",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -28,12 +30,14 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "history": "^1.12.2",
+    "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
     "react-router": "^1.0.0-rc1",
+    "validate.js": "^0.8.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
   }
