Start switching to redux

--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "babel-core": "^5.8.25",
     "babelify": "^6.3.0",
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
     "del": "^2.0.2",
-    "eventemitter3": "^1.1.1",
     "express": "^4.13.3",
-    "flux": "^2.1.1",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -30,13 +29,20 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "history": "^1.12.2",
-    "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
+    "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc1",
+    "redux": "^3.0.2",
+    "redux-actions": "^0.8.0",
+    "redux-devtools": "^2.1.5",
+    "redux-form": "^2.1.0",
+    "redux-logger": "^2.0.3",
+    "redux-router": "^1.0.0-beta3",
+    "redux-thunk": "^1.0.0",
     "resolve": "^1.1.6",
     "validate.js": "^0.8.0",
     "vinyl-source-stream": "^1.1.0",
