--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
+    "classnames": "^2.1.5",
     "del": "^2.0.2",
     "express": "^4.13.3",
     "font-awesome": "^4.4.0",
