--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.1.5",
     "del": "^2.0.2",
     "express": "^4.13.3",
+    "falcor": "^0.1.13",
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -32,6 +33,7 @@
     "history": "^1.12.2",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
+    "moment": "^2.10.6",
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
