--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-core": "^5.8.25",
     "babelify": "^6.3.0",
+    "bluebird": "^2.10.2",
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
@@ -31,6 +32,7 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "history": "^1.12.2",
+    "load-script": "^1.0.0",
     "lodash": "^3.10.1",
     "merge-stream": "^1.0.0",
     "moment": "^2.10.6",
