--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "font-awesome": "^4.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-newer": "^0.5.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
