--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemon": "^1.7.1",
     "react": "^0.13.3",
     "react-bootstrap": "^0.26.1",
+    "react-gemini-scrollbar": "^1.1.1",
     "react-redux": "^3.1.0",
     "react-router": "^1.0.0-rc1",
     "redux": "^3.0.2",
