Prep build for having an actual server with a falcor router running

--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "del": "^2.0.2",
     "express": "^4.13.3",
     "falcor": "^0.1.13",
+    "falcor-router": "^0.2.10",
     "font-awesome": "^4.4.0",
     "get-size": "^1.2.2",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.3.0",
+    "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
-    "gulp-newer": "^0.5.1",
+    "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
@@ -54,6 +57,7 @@
     "redux-router": "^1.0.0-beta3",
     "redux-thunk": "^1.0.0",
     "resolve": "^1.1.6",
+    "run-sequence": "^1.1.4",
     "validate.js": "^0.8.0",
     "video.js": "^5.0.0",
     "vinyl-source-stream": "^1.1.0",
