Start using a real falcor router with sample data for the development server

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "del": "^2.0.2",
     "express": "^4.13.3",
     "falcor": "^0.1.13",
+    "falcor-express": "^0.1.2",
+    "falcor-http-datasource": "^0.1.2",
+    "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.2.10",
     "font-awesome": "^4.4.0",
     "get-size": "^1.2.2",
@@ -30,6 +33,7 @@
     "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.1",
+    "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
