--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
     "classnames": "^2.1.5",
+    "cookie-parser": "^1.4.0",
     "del": "^2.0.2",
     "express": "^4.13.3",
     "falcor": "^0.1.13",
