--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^5.8.25",
     "babelify": "^6.3.0",
     "bluebird": "^2.10.2",
+    "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
