--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redux-thunk": "^1.0.0",
     "resolve": "^1.1.6",
     "run-sequence": "^1.1.4",
+    "uuid": "^2.0.1",
     "validate.js": "^0.8.0",
     "video.js": "^5.0.0",
     "vinyl-source-stream": "^1.1.0",
