Add a server-side "cursor" for paging comments that will likely be similar to what happens with C* page state

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "bootswatch": "^3.3.5",
     "browserify": "^11.2.0",
     "classnames": "^2.1.5",
-    "cookie-parser": "^1.4.0",
     "del": "^2.0.2",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "falcor": "^0.1.13",
     "falcor-express": "^0.1.2",
     "falcor-http-datasource": "^0.1.2",
