--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "killrvideo-web",
   "version": "0.0.0",
   "description": "Web UI for the KillrVideo application demo.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,26 +10,20 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
-    "babel-core": "^5.8.25",
-    "babelify": "^6.3.0",
-    "bluebird": "^2.10.2",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
+    "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
-    "bootstrap": "^3.3.5",
-    "bootswatch": "^3.3.5",
-    "browserify": "^11.2.0",
-    "classnames": "^2.1.5",
-    "del": "^2.0.2",
+    "browserify": "^12.0.1",
+    "del": "^2.1.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
-    "falcor": "^0.1.13",
     "falcor-express": "^0.1.2",
-    "falcor-http-datasource": "^0.1.2",
     "falcor-json-graph": "^1.1.7",
-    "falcor-router": "^0.2.10",
-    "font-awesome": "^4.4.0",
-    "get-size": "^1.2.2",
+    "falcor-router": "^0.2.11",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0",
+    "gulp-babel": "^6.1.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
@@ -40,34 +34,43 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "history": "^1.12.2",
-    "load-script": "^1.0.0",
-    "lodash": "^3.10.1",
-    "md5": "^2.0.0",
     "merge-stream": "^1.0.0",
-    "moment": "^2.10.6",
-    "nodemon": "^1.7.1",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.26.4",
-    "react-gemini-scrollbar": "^1.1.1",
-    "react-redux": "^3.1.0",
-    "react-router": "^1.0.0-rc1",
-    "redux": "^3.0.2",
-    "redux-actions": "^0.8.0",
-    "redux-devtools": "^2.1.5",
-    "redux-form": "^2.1.0",
-    "redux-logger": "^2.0.3",
-    "redux-router": "^1.0.0-beta3",
-    "redux-thunk": "^1.0.0",
+    "nodemon": "^1.8.1",
     "resolve": "^1.1.6",
     "run-sequence": "^1.1.4",
     "uuid": "^2.0.1",
-    "validate.js": "^0.8.0",
-    "video.js": "^5.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.6.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.0.5",
+    "bootswatch": "^3.3.5",
+    "classnames": "^2.2.0",
+    "falcor": "^0.1.14",
+    "falcor-http-datasource": "^0.1.2",
+    "font-awesome": "^4.4.0",
+    "get-size": "^1.2.2",
+    "history": "^1.13.1",
+    "load-script": "^1.0.0",
+    "lodash": "^3.10.1",
+    "md5": "^2.0.0",
+    "moment": "^2.10.6",
+    "react": "^0.14.2",
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.2",
+    "react-gemini-scrollbar": "^2.0.1",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
+    "redux": "^3.0.4",
+    "redux-actions": "^0.8.0",
+    "redux-form": "^3.0.10",
+    "redux-logger": "^2.0.4",
+    "redux-router": "^1.0.0-beta4",
+    "redux-thunk": "^1.0.0",
+    "validate.js": "^0.9.0",
+    "video.js": "^5.2.1"
   }
 }
