--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "bluebird": "^3.0.5",
+    "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "classnames": "^2.2.0",
     "falcor": "^0.1.14",
