--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
     "browserify": "^12.0.1",
+    "cookie-parser": "^1.4.0",
     "del": "^2.1.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
