--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "classnames": "^2.2.0",
-    "falcor": "^0.1.14",
+    "falcor": "github:netflix/falcor",
     "falcor-http-datasource": "^0.1.2",
     "font-awesome": "^4.4.0",
     "gemini-scrollbar": "^1.2.9",
