Revert "Switch to latest falcor from GH to address a few bugs"
This reverts commit e447e48f515367b25085262c4a19f8e964dfc076.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
     "classnames": "^2.2.0",
-    "falcor": "github:netflix/falcor",
+    "falcor": "github:netflix/falcor#0.x",
     "falcor-http-datasource": "^0.1.2",
     "font-awesome": "^4.4.0",
     "gemini-scrollbar": "^1.2.9",
