--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
     "react-router": "^1.0.0",
     "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
-    "redux-form": "^3.0.10",
+    "redux-form": "^3.1.7",
     "redux-logger": "^2.0.4",
+    "redux-promise-middleware": "^2.3.1",
     "redux-router": "^1.0.0-beta4",
     "redux-thunk": "^1.0.0",
     "validate.js": "^0.9.0",
