--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.2",
+    "react-dropzone": "^3.3.0",
     "react-gemini-scrollbar": "^2.0.1",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
