--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.14.1",
     "browserify": "^12.0.1",
     "cookie-parser": "^1.4.0",
+    "cors": "^2.7.1",
     "del": "^2.1.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
@@ -43,6 +44,7 @@
     "resolve": "^1.1.6",
     "run-sequence": "^1.1.4",
     "uuid": "^2.0.1",
+    "vhost": "^3.0.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
