--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "gulp-babel": "^6.1.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.0",
     "gulp-if": "^2.0.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^1.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-rename": "^1.2.2",
