Switch to simpler react-router-redux for routing

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "font-awesome": "^4.4.0",
     "gemini-scrollbar": "^1.2.9",
     "get-size": "^1.2.2",
-    "history": "^1.13.1",
     "load-script": "^1.0.0",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
@@ -69,13 +68,13 @@
     "react-dropzone": "^3.3.0",
     "react-gemini-scrollbar": "^2.0.1",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^2.1.0",
     "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
     "redux-form": "^4.1.0",
     "redux-logger": "^2.0.4",
     "redux-promise-middleware": "^2.3.1",
-    "redux-router": "^1.0.0-beta4",
     "redux-thunk": "^1.0.0",
     "validate.js": "^0.9.0",
     "xhr": "^2.2.0"
