--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "redux-logger": "^2.0.4",
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.0",
+    "reselect": "^2.0.3",
     "validate.js": "^0.9.0",
     "xhr": "^2.2.0"
   }
