--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
     "browserify": "^12.0.1",
@@ -47,7 +49,8 @@
     "uuid": "^2.0.1",
     "vhost": "^3.0.2",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1"
+    "watchify": "^3.6.1",
+    "webpack": "^1.12.14"
   },
   "dependencies": {
     "bluebird": "^3.1.1",
