--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "falcor-http-datasource": "^0.1.3",
     "font-awesome": "^4.4.0",
     "gemini-scrollbar": "^1.2.9",
+    "jsuri": "^1.3.1",
     "load-script": "^1.0.0",
     "lodash": "^4.3.0",
     "md5": "^2.0.0",
