--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "vhost": "^3.0.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-bundle-size-analyzer": "^2.0.1"
   },
   "dependencies": {
     "bluebird": "^3.1.1",
