Allow for CSS requires to declare style dependencies from JS and bundle into a separate CSS file

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "browserify": "^12.0.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
+    "css-loader": "^0.23.1",
     "del": "^2.1.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "falcor-express": "^0.1.2",
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.2.12",
@@ -46,6 +48,7 @@
     "resolve": "^1.1.6",
     "run-sequence": "^1.1.4",
     "socket.io": "^1.4.5",
+    "style-loader": "^0.13.0",
     "uuid": "^2.0.1",
     "vhost": "^3.0.2",
     "vinyl-source-stream": "^1.1.0",
