Export package as a library, allow images to be required from JS, move them under source folder

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "falcor-express": "^0.1.2",
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.2.12",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
     "gulp-cached": "^1.1.0",
