--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-dropzone": "^3.3.0",
     "react-gemini-scrollbar": "^2.0.1",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.0-rc5",
+    "react-router": "^2.0.0",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
