--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "A mocked/sample web server implementation for testing the KillrVideo Web UI (killrvideo-web)",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf lib",
+    "build": "babel src --out-dir lib"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
-  "license": "Apache-2.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LukeTillman/killrvideo-web-server.git"
+  },
+  "files": [
+    "lib"
+  ],
+  "license": "Apache-2.0",
+  "private": true,
+  "devDependencies": {
+    "babel-cli": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
+    "rimraf": "^2.5.2"
+  }
 }
