--- a/package.json
+++ b/package.json
@@ -21,5 +21,21 @@
     "babel-cli": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "rimraf": "^2.5.2"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.3",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "falcor-express": "^0.1.2",
+    "falcor-json-graph": "^1.1.7",
+    "falcor-router": "^0.3.0",
+    "lodash": "^4.5.1",
+    "moment": "^2.11.2",
+    "socket.io": "^1.4.5",
+    "uuid": "^2.0.1",
+    "vhost": "^3.0.2"
   }
 }
