--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "build": "babel src --out-dir lib"
+    "build:js": "babel src --out-dir lib",
+    "build:html": "cpx src/server.html lib --verbose",
+    "dev": "npm-run-all clean --parallel \"build:* -- --watch\""
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -20,6 +22,8 @@
   "devDependencies": {
     "babel-cli": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
+    "cpx": "^1.2.1",
+    "npm-run-all": "^1.5.1",
     "rimraf": "^2.5.2"
   },
   "dependencies": {
