--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf lib",
     "build:js": "babel src --out-dir lib",
     "build:html": "cpx src/server.html lib --verbose",
-    "dev": "npm-run-all clean --parallel \"build:* -- --watch\""
+    "serve": "nodemon",
+    "start": "npm-run-all clean --parallel \"build:* -- --watch\" serve"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -23,6 +24,7 @@
     "babel-cli": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "cpx": "^1.2.1",
+    "nodemon": "^1.9.1",
     "npm-run-all": "^1.5.1",
     "rimraf": "^2.5.2"
   },
