--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Web UI for the KillrVideo application demo.",
   "main": "src/webpack.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "webpack --progress",
+    "watch": "npm run build -- --watch",
+    "start": "npm-run-all clean watch"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -18,6 +21,7 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
@@ -26,6 +30,7 @@
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
+    "cpx": "^1.2.1",
     "css-loader": "^0.23.1",
     "del": "^2.1.0",
     "express": "^4.13.3",
@@ -43,6 +48,8 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "nodemon": "^1.8.1",
+    "npm-run-all": "^1.5.1",
+    "rimraf": "^2.5.2",
     "socket.io": "^1.4.5",
     "style-loader": "^0.13.0",
     "uuid": "^2.0.1",
