--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist",
     "build": "webpack --progress",
     "watch": "npm run build -- --watch",
-    "start": "npm-run-all clean watch"
+    "start": "npm-run-all clean watch",
+    "release": "release-it"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -30,6 +31,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "npm-run-all": "^1.5.1",
+    "release-it": "^2.3.1",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
