--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clean": "rimraf lib",
     "build:js": "babel src --out-dir lib",
     "build:html": "cpx src/server.html lib --verbose",
-    "serve": "nodemon",
+    "nodemon": "nodemon",
+    "wait": "wait-on file:lib/index.js",
+    "serve": "npm-run-all wait nodemon",
     "start": "npm-run-all clean --parallel \"build:* -- --watch\" serve"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
@@ -26,7 +28,8 @@
     "cpx": "^1.2.1",
     "nodemon": "^1.9.1",
     "npm-run-all": "^1.5.1",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "wait-on": "^1.3.1"
   },
   "dependencies": {
     "bluebird": "^3.3.3",
