--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-bundle-size-analyzer": "^2.0.1"
+    "webpack-bundle-size-analyzer": "^2.0.1",
+    "webpack-livereload-plugin": "^0.6.0"
   },
   "dependencies": {
     "bluebird": "^3.1.1",
