--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:js": "babel src --out-dir out",
     "build:resources": "cpx src/resources/** out/resources --verbose",
     "build:client": "cpx node_modules/killrvideo-web/dist/** out/resources/static --verbose",
+    "build:protos": "cpx lib/killrvideo-service-protos/src/** out/resources/protos --verbose",
     "nodemon": "nodemon",
     "wait": "wait-on file:out/index.js",
     "serve": "npm-run-all wait nodemon",
