--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "out/index.js",
   "scripts": {
     "clean": "rimraf out",
-    "build:js": "babel src --out-dir out",
+    "build:js": "babel src --out-dir out --source-maps",
     "build:resources": "cpx src/resources/** out/resources --verbose",
     "build:client": "cpx node_modules/killrvideo-web/dist/** out/resources/static --verbose",
     "build:protos": "cpx lib/killrvideo-service-protos/src/** out/resources/protos --verbose",
-    "nodemon": "nodemon",
+    "nodemon": "nodemon --debug",
     "wait": "wait-on file:out/index.js",
     "serve": "npm-run-all wait nodemon",
     "start": "npm-run-all clean --parallel \"build:* -- --watch\" serve"
