Do config via yaml, load via config project

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ node_modules
 .vscode
 /typings
 
-# Configuration for the server
-src/config.js
-
 # Build output
 out
+
+# Local config
+config/local.yaml
