--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "bluebird": "^3.3.3",
     "body-parser": "^1.15.0",
+    "config": "^1.19.0",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
@@ -44,6 +45,7 @@
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.3.0",
     "grpc": "^0.13.1",
+    "js-yaml": "^3.5.5",
     "killrvideo-web": "https://github.com/LukeTillman/killrvideo-web/releases/download/v1.0.0-beta.1/killrvideo-web-1.0.0-beta.1.tgz",
     "lodash": "^4.5.1",
     "moment": "^2.11.2",
