--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cpx": "^1.2.1",
     "nodemon": "^1.9.1",
     "npm-run-all": "^1.5.1",
+    "protobufjs": "^4.0.0",
     "rimraf": "^2.5.2",
     "wait-on": "^1.3.1"
   },
