--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build:js": "babel src --out-dir out --source-maps",
     "build:resources": "cpx src/resources/** out/resources --verbose",
     "build:client": "cpx node_modules/killrvideo-web/dist/** out/resources/static --verbose",
-    "build:protos": "cpx lib/killrvideo-service-protos/src/** out/resources/protos --verbose",
+    "build:killrvideoprotos": "cpx lib/killrvideo-service-protos/src/** out/resources/protos --verbose",
+    "build:googleprotos": "cpx lib/google/** out/resources/protos/google --verbose",
     "nodemon": "nodemon --debug",
     "wait": "wait-on file:out/index.js",
     "serve": "npm-run-all wait nodemon",
-    "start": "npm-run-all clean --parallel \"build:* -- --watch\" serve"
+    "start": "npm-run-all clean --parallel \"build:* -- --watch\""
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -25,19 +26,18 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.6.0",
+    "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
-    "cpx": "^1.2.1",
+    "cpx": "^1.3.1",
     "nodemon": "^1.9.1",
-    "npm-run-all": "^1.5.1",
-    "protobufjs": "^4.0.0",
+    "npm-run-all": "^1.7.0",
     "rimraf": "^2.5.2",
-    "wait-on": "^1.3.1"
+    "wait-on": "^1.4.0"
   },
   "dependencies": {
-    "bluebird": "^3.3.3",
+    "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
-    "config": "^1.19.0",
+    "config": "^1.20.1",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
