--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "body-parser": "^1.15.0",
     "config": "^1.20.1",
     "cookie-parser": "^1.4.1",
-    "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "falcor-express": "^0.1.2",
@@ -48,10 +47,6 @@
     "grpc": "^0.13.1",
     "js-yaml": "^3.5.5",
     "killrvideo-web": "https://github.com/LukeTillman/killrvideo-web/releases/download/v1.0.0-beta.1/killrvideo-web-1.0.0-beta.1.tgz",
-    "lodash": "^4.5.1",
-    "moment": "^2.11.2",
-    "socket.io": "^1.4.5",
-    "uuid": "^2.0.1",
-    "vhost": "^3.0.2"
+    "socket.io": "^1.4.5"
   }
 }
