--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "cpx": "^1.3.1",
+    "morgan": "^1.7.0",
     "nodemon": "^1.9.1",
     "npm-run-all": "^1.7.0",
     "rimraf": "^2.5.2",
@@ -47,6 +48,7 @@
     "grpc": "^0.13.1",
     "js-yaml": "^3.5.5",
     "killrvideo-web": "https://github.com/LukeTillman/killrvideo-web/releases/download/v1.0.0-beta.1/killrvideo-web-1.0.0-beta.1.tgz",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "winston": "^2.2.0"
   }
 }
