--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,3 +3,21 @@
 
 # The API key for talking to YouTube
 youtube_api_key: REPLACE_WITH_YOUR_KEY
+
+# Web Server settings
+web:
+  # Where to start the web server
+  server:
+    host: localhost
+    port: 3000
+  # Express session settings
+  session:
+    name: killrvideo.sid
+    secret: THE_INTERNET_IS_FULL_OF_CAT_VIDEOS
+    cassandra:
+      contact_points:
+        - 127.0.0.1
+      keyspace: killrvideo_web
+      table: express_session
+    
+  
