--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
+    "cassandra-store": "^3.0.0",
     "config": "^1.20.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
