--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grpc": "^0.13.1",
     "js-yaml": "^3.5.5",
     "killrvideo-web": "https://github.com/LukeTillman/killrvideo-web/releases/download/v1.0.0-beta.1/killrvideo-web-1.0.0-beta.1.tgz",
+    "memoizee": "^0.3.9",
     "passport": "^0.3.2",
     "socket.io": "^1.4.5",
     "winston": "^2.2.0"
