--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
-  presets: [
-    'es2015'
+  "plugins": [ 
+    "transform-es2015-modules-commonjs",
+    "transform-es2015-destructuring",
+    "transform-es2015-parameters"
   ]
 }
