--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   "files": [
     "out"
   ],
+  "engines": {
+    "node": ">=5.0.0"
+  },
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
+    "babel-plugin-transform-es2015-parameters": "^6.7.0",
     "cpx": "^1.3.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.9.1",
