--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "killrvideo-web": "https://github.com/LukeTillman/killrvideo-web/releases/download/v1.0.0-beta.1/killrvideo-web-1.0.0-beta.1.tgz",
     "memoizee": "^0.3.9",
     "passport": "^0.3.2",
+    "ramda": "^0.21.0",
     "socket.io": "^1.4.5",
     "winston": "^2.2.0"
   }
