--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "clean": "npm-run-all --parallel \"clean:*\"",
     "clean:client": "rimraf dist/client",
     "clean:server": "rimraf dist/server",
+    "build": "npm-run-all --parallel build:client \"build:server:*\"",
     "build:client": "webpack --progress",
-    "watch": "npm run build -- --watch",
+    "build:server:js": "babel src/server --out-dir dist/server --source-maps",
+    "build:server:resources": "cpx src/server/resources/** dist/server/resources --verbose",
+    "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
+    "build:server:googleprotos": "cpx lib/google/** dist/server/resources/protos/google --verbose",
+    "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
     "start": "npm-run-all clean watch",
     "postversion": "npm-run-all push:*",
     "push:commits": "git push",
@@ -31,11 +36,16 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "babel-cli": "^6.8.0",
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-destructuring": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-plugin-transform-es2015-parameters": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "cpx": "^1.3.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
