--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "killrvideo-web",
   "version": "1.0.0-beta.1",
   "description": "Web UI for the KillrVideo application demo.",
-  "main": "src/webpack.js",
+  "main": "dist/server/index.js",
   "scripts": {
     "clean": "npm-run-all --parallel \"clean:*\"",
     "clean:client": "rimraf dist/client",
@@ -33,6 +33,9 @@
     "*.md",
     "dist"
   ],
+  "engines": {
+    "node": ">=5.0.0"
+  },
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
@@ -60,18 +63,32 @@
   },
   "dependencies": {
     "bluebird": "^3.3.5",
+    "body-parser": "^1.15.1",
     "bootstrap": "^3.3.5",
     "bootswatch": "^3.3.5",
+    "cassandra-store": "^3.0.0",
     "classnames": "^2.2.3",
+    "config": "^1.20.1",
+    "d": "^1.0.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "falcor": "^0.1.16",
+    "falcor-express": "^0.1.2",
     "falcor-http-datasource": "^0.1.3",
+    "falcor-json-graph": "^1.1.7",
+    "falcor-router": "^0.4.0",
     "font-awesome": "^4.4.0",
     "gemini-scrollbar": "^1.2.9",
+    "grpc": "^0.13.2-pre1",
+    "js-yaml": "^3.6.0",
     "jsuri": "^1.3.1",
     "load-script": "^1.0.0",
     "lodash": "^4.3.0",
     "md5": "^2.0.0",
+    "memoizee": "^0.3.10",
     "moment": "^2.10.6",
+    "passport": "^0.3.2",
+    "ramda": "^0.21.0",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.2",
@@ -87,8 +104,11 @@
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.3",
+    "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.5",
+    "uuid": "^2.0.2",
     "validate.js": "^0.9.0",
+    "winston": "^2.2.0",
     "xhr": "^2.2.0"
   }
 }
