--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "github": "^0.2.4",
+    "morgan": "^1.7.0",
     "npm-run-all": "^1.8.0",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
@@ -64,8 +65,8 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "body-parser": "^1.15.1",
-    "bootstrap": "^3.3.5",
-    "bootswatch": "^3.3.5",
+    "bootstrap": "^3.3.6",
+    "bootswatch": "^3.3.6",
     "cassandra-store": "^3.0.0",
     "classnames": "^2.2.3",
     "config": "^1.20.1",
@@ -77,7 +78,7 @@
     "falcor-http-datasource": "^0.1.3",
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.4.0",
-    "font-awesome": "^4.4.0",
+    "font-awesome": "^4.6.1",
     "gemini-scrollbar": "^1.2.9",
     "grpc": "^0.13.2-pre1",
     "js-yaml": "^3.6.0",
