--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
     "build:server:googleprotos": "cpx lib/google/** dist/server/resources/protos/google --verbose",
     "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
-    "start": "npm-run-all clean watch",
+    "start": "forever start config/forever.json",
+    "stop": "forever stop killrvideo",
     "postversion": "npm-run-all push:*",
     "push:commits": "git push",
     "push:tags": "git push --tags",
@@ -79,6 +80,7 @@
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.4.0",
     "font-awesome": "^4.6.1",
+    "forever": "^0.15.1",
     "gemini-scrollbar": "^1.2.9",
     "grpc": "^0.13.2-pre1",
     "js-yaml": "^3.6.0",
