--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,11 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
-# VS Code settings
-.vscode
+# VS Code stuff
 /typings
 
 # Build and package output
 /dist
-/*.tgz
 
 # Local config
 config/local.yaml
