Make logging configurable and allow logging to a file

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
     "build:server:googleprotos": "cpx lib/google/** dist/server/resources/protos/google --verbose",
     "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
-    "start": "forever start config/forever.json",
+    "start": "cross-env NODE_ENV=production forever start config/forever.json",
     "stop": "forever stop killrvideo",
     "postversion": "npm-run-all push:*",
     "push:commits": "git push",
@@ -89,6 +89,7 @@
     "lodash": "^4.3.0",
     "md5": "^2.0.0",
     "memoizee": "^0.3.10",
+    "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "passport": "^0.3.2",
     "ramda": "^0.21.0",
