--- a/package.json
+++ b/package.json
@@ -8,22 +8,16 @@
     "clean:client": "rimraf dist/client",
     "clean:server": "rimraf dist/server",
     "build": "npm-run-all --parallel build:client \"build:server:*\"",
-    "build:client": "webpack --progress",
+    "build:client": "webpack --config build/webpack.config.js --progress",
     "build:server:js": "babel src/server --out-dir dist/server --source-maps",
     "build:server:resources": "cpx src/server/resources/** dist/server/resources --verbose",
     "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
     "build:server:googleprotos": "cpx lib/google/** dist/server/resources/protos/google --verbose",
     "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
-    "start": "cross-env NODE_ENV=production forever start config/forever.json",
+    "start": "forever start config/forever.json",
     "stop": "forever stop killrvideo",
-    "postversion": "npm-run-all push:*",
-    "push:commits": "git push",
-    "push:tags": "git push --tags",
-    "release": "npm-run-all release:build release:pack release:github",
-    "release:build": "cross-env NODE_ENV=production npm-run-all clean build",
-    "release:pack": "npm pack",
-    "release:github": "node ./create-github-release.js",
-    "analyze": "webpack --json | webpack-bundle-size-analyzer > webpack-bundle-size-analyzer.log"
+    "release": "cross-env NODE_ENV=production npm-run-all clean build",
+    "analyze": "webpack --config build/webpack.config.js --json | webpack-bundle-size-analyzer > webpack-bundle-size-analyzer.log"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
@@ -54,7 +48,6 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "github": "^0.2.4",
     "morgan": "^1.7.0",
     "npm-run-all": "^1.8.0",
     "rimraf": "^2.5.2",
