Try to make startup more resilient to DSE not being available right away
- Startup is now async
- Connection to C* for session will retry before bailing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean:server": "rimraf dist/server",
     "build": "npm-run-all --parallel build:client \"build:server:*\"",
     "build:client": "webpack --progress",
+    "build:server": "npm-run-all --parallel \"build:server:*\"",
     "build:server:js": "babel src/server --out-dir dist/server --source-maps",
     "build:server:resources": "cpx src/server/resources/** dist/server/resources --verbose",
     "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
@@ -60,6 +61,7 @@
     "body-parser": "^1.15.1",
     "bootstrap": "^3.3.6",
     "bootswatch": "^3.3.6",
+    "cassandra-driver": "^3.0.2",
     "cassandra-store": "^3.0.0",
     "classnames": "^2.2.3",
     "config": "^1.20.1",
