--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ node_modules
 # Build and package output
 /dist
 
-# Local config
+# Environment-specific config
 config/local.yaml
+config/production.yaml
