--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "killrvideo-web",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "Web UI for the KillrVideo application demo.",
   "main": "dist/server/index.js",
   "scripts": {
