Turn down the logging level on initial session connection to Cassandra, set default keyspace for sessions to same one services will be using

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -17,7 +17,7 @@ web:
     cassandra:
       contactPoints:
         - 127.0.0.1
-      keyspace: killrvideo_web
+      keyspace: killrvideo
       table: express_session
 
 # Logging config
