--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,12 +7,16 @@
 			"request": "launch",
 			"program": "${workspaceRoot}\\dist\\server\\index.js",
 			"stopOnEntry": false,
-			"args": [],
+			"args": [
+				"dotenv_config_path=${workspaceRoot}\\lib\\killrvideo-docker-common\\killrvideo.env"
+			],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": null,
 			"runtimeExecutable": null,
 			"runtimeArgs": [
-				"--nolazy"
+				"--nolazy",
+				"-r",
+				"dotenv/config"
 			],
 			"env": {
 				"NODE_ENV": "development"
