--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cpx": "^1.3.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "morgan": "^1.7.0",
@@ -79,7 +80,7 @@
     "falcor-router": "^0.4.0",
     "font-awesome": "^4.6.1",
     "gemini-scrollbar": "^1.2.9",
-    "grpc": "^0.13.2-pre1",
+    "grpc": "^0.14.1",
     "js-yaml": "^3.6.0",
     "jsuri": "^1.3.1",
     "load-script": "^1.0.0",
