--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.3",
+    "simple-get": "^2.1.0",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.5",
     "uuid": "^2.0.2",
