Add script for creating docker compose environment file, update launch configuration to just use the docker compose environment file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,7 @@
 			"request": "launch",
 			"program": "${workspaceRoot}\\dist\\server\\index.js",
 			"stopOnEntry": false,
-			"args": [
-				"dotenv_config_path=${workspaceRoot}\\lib\\killrvideo-docker-common\\killrvideo.env"
-			],
+			"args": [],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": null,
 			"runtimeExecutable": null,
