Move front-end only dependencies to devDependencies to reduce docker image size

--- a/package.json
+++ b/package.json
@@ -47,49 +47,26 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.6",
+    "bootswatch": "^3.3.6",
+    "classnames": "^2.2.3",
     "cpx": "^1.3.1",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "morgan": "^1.7.0",
-    "npm-run-all": "^1.8.0",
-    "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "webpack-bundle-size-analyzer": "^2.0.1",
-    "webpack-livereload-plugin": "^0.8.1"
-  },
-  "dependencies": {
-    "bluebird": "^3.3.5",
-    "body-parser": "^1.15.1",
-    "bootstrap": "^3.3.6",
-    "bootswatch": "^3.3.6",
-    "cassandra-driver": "^3.0.2",
-    "cassandra-store": "^3.0.0",
-    "classnames": "^2.2.3",
-    "config": "^1.20.1",
-    "d": "^1.0.0",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
     "falcor": "^0.1.16",
-    "falcor-express": "^0.1.2",
     "falcor-http-datasource": "^0.1.3",
-    "falcor-json-graph": "^1.1.7",
-    "falcor-router": "^0.4.0",
+    "file-loader": "^0.8.5",
     "font-awesome": "^4.6.1",
     "gemini-scrollbar": "^1.2.9",
-    "grpc": "^0.14.1",
-    "js-yaml": "^3.6.0",
     "jsuri": "^1.3.1",
     "load-script": "^1.0.0",
     "lodash": "^4.3.0",
     "md5": "^2.0.0",
-    "memoizee": "^0.3.10",
     "moment": "^2.10.6",
-    "passport": "^0.3.2",
-    "ramda": "^0.21.0",
+    "morgan": "^1.7.0",
+    "npm-run-all": "^1.8.0",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.2",
     "react-dom": "^0.14.2",
@@ -105,12 +82,35 @@
     "redux-promise-middleware": "^2.3.1",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.3",
+    "rimraf": "^2.5.2",
+    "style-loader": "^0.13.1",
+    "validate.js": "^0.9.0",
+    "webpack": "^1.13.0",
+    "webpack-bundle-size-analyzer": "^2.0.1",
+    "webpack-livereload-plugin": "^0.8.1",
+    "xhr": "^2.2.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.5",
+    "body-parser": "^1.15.1",
+    "cassandra-driver": "^3.0.2",
+    "cassandra-store": "^3.0.0",
+    "config": "^1.20.1",
+    "d": "^1.0.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "falcor-express": "^0.1.2",
+    "falcor-json-graph": "^1.1.7",
+    "falcor-router": "^0.4.0",
+    "grpc": "^0.14.1",
+    "js-yaml": "^3.6.0",
+    "memoizee": "^0.3.10",
+    "passport": "^0.3.2",
+    "ramda": "^0.21.0",
     "simple-get": "^2.1.0",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.5",
     "uuid": "^2.0.2",
-    "validate.js": "^0.9.0",
-    "winston": "^2.2.0",
-    "xhr": "^2.2.0"
+    "winston": "^2.2.0"
   }
 }
