--- a/package.json
+++ b/package.json
@@ -91,9 +91,8 @@
     "xhr": "^2.2.0"
   },
   "dependencies": {
-    "bluebird": "^3.3.5",
+    "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
-    "cassandra-driver": "^3.0.2",
     "cassandra-store": "^3.0.0",
     "config": "^1.20.1",
     "d": "^1.0.0",
@@ -104,6 +103,7 @@
     "falcor-router": "^0.4.0",
     "grpc": "^0.14.1",
     "js-yaml": "^3.6.0",
+    "killrvideo-nodejs-common": "https://github.com/KillrVideo/killrvideo-nodejs-common/releases/download/v1.0.0/killrvideo-nodejs-common-1.0.0.tgz",
     "memoizee": "^0.3.10",
     "passport": "^0.3.2",
     "ramda": "^0.21.0",
