--- a/package.json
+++ b/package.json
@@ -110,7 +110,6 @@
     "simple-get": "^2.1.0",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.5",
-    "uuid": "^2.0.2",
-    "winston": "^2.2.0"
+    "uuid": "^2.0.2"
   }
 }
