Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "type": "git",
     "url": "https://github.com/LukeTillman/killrvideo-web.git"
   },
+  "homepage": "https://killrvideo.github.io",
   "files": [
     "*.md",
     "dist"
