Fix some scripts

--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "build:client": "webpack --progress",
     "build:server": "npm-run-all --parallel \"build:server:*\"",
     "build:server:js": "babel src/server --out-dir dist/server --source-maps",
-    "build:server:resources": "cpx src/server/resources/** dist/server/resources --verbose",
-    "build:server:protos": "cpx lib/killrvideo-service-protos/src/** dist/server/resources/protos --verbose",
-    "build:server:googleprotos": "cpx lib/google/** dist/server/resources/protos/google --verbose",
+    "build:server:resources": "cpx \"src/server/resources/**\" dist/server/resources --verbose",
+    "build:server:protos": "cpx \"lib/killrvideo-service-protos/src/**\" dist/server/resources/protos --verbose",
+    "build:server:googleprotos": "cpx \"lib/google/**\" dist/server/resources/protos/google --verbose",
     "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
-    "postversion": "npm-run-all push:commits push:tags",
-    "push:commits": "git push",
-    "push:tags": "git push --tags",
+    "postversion": "git push --follow-tags",
     "release:build": "cross-env NODE_ENV=production npm run build",
     "release": "npm-run-all clean release:build",
     "start": "node dist/server/index.js",
