--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "dependencies": {
     "bluebird": "^3.4.0",
     "body-parser": "^1.15.1",
+    "cassandra-driver": "^3.1.1",
     "cassandra-store": "^3.0.0",
     "config": "^1.20.1",
     "express": "^4.13.4",
@@ -99,8 +100,9 @@
     "falcor-express": "^0.1.2",
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.4.0",
+    "grpc": "^1.0.0-pre1",
     "js-yaml": "^3.6.0",
-    "killrvideo-nodejs-common": "https://github.com/KillrVideo/killrvideo-nodejs-common/releases/download/v1.0.1/killrvideo-nodejs-common-1.0.1.tgz",
+    "killrvideo-nodejs-common": "https://github.com/KillrVideo/killrvideo-nodejs-common/releases/download/v2.1.1/killrvideo-nodejs-common-2.1.1.tgz",
     "memoizee": "^0.3.10",
     "passport": "^0.3.2",
     "ramda": "^0.21.0",
