--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -1,4 +1,6 @@
 # Allow configuration in YAML files to be overridden by environment variable values
+loggingLevel: KILLRVIDEO_LOGGING_LEVEL
+
 client:
   youTubeApiKey: KILLRVIDEO_YOUTUBE_API_KEY
 
