--- a/package.json
+++ b/package.json
@@ -46,48 +46,19 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "bootstrap": "^3.3.6",
-    "bootswatch": "^3.3.6",
-    "classnames": "^2.2.3",
     "cpx": "^1.3.2",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "falcor": "^0.1.16",
-    "falcor-http-datasource": "^0.1.3",
     "file-loader": "^0.9.0",
-    "font-awesome": "^4.6.1",
-    "gemini-scrollbar": "^1.2.9",
-    "jsuri": "^1.3.1",
-    "load-script": "^1.0.0",
-    "lodash": "^4.3.0",
-    "md5": "^2.0.0",
-    "moment": "^2.10.6",
     "morgan": "^1.7.0",
     "npm-run-all": "^2.3.0",
-    "react": "^0.14.2",
-    "react-bootstrap": "^0.28.2",
-    "react-dom": "^0.14.2",
-    "react-dropzone": "^3.3.0",
-    "react-gemini-scrollbar": "^2.0.1",
-    "react-redux": "^4.0.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^2.1.0",
-    "redux": "^3.0.4",
-    "redux-actions": "^0.8.0",
-    "redux-form": "^4.1.0",
-    "redux-logger": "^2.0.4",
-    "redux-promise-middleware": "^2.3.1",
-    "redux-thunk": "^1.0.0",
-    "reselect": "^2.0.3",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "validate.js": "^0.9.0",
     "webpack": "^1.13.1",
     "webpack-bundle-size-analyzer": "^2.0.2",
-    "webpack-livereload-plugin": "^0.8.1",
-    "xhr": "^2.2.0"
+    "webpack-livereload-plugin": "^0.8.1"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
@@ -107,7 +78,6 @@
     "passport": "^0.3.2",
     "ramda": "^0.21.0",
     "socket.io": "^1.4.8",
-    "socket.io-client": "^1.4.8",
     "uuid": "^2.0.2"
   }
 }
