--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,5 +15,39 @@
   "bugs": {
     "url": "https://github.com/KillrVideo/killrvideo-web/issues"
   },
-  "homepage": "https://killrvideo.github.io"
+  "homepage": "https://killrvideo.github.io",
+  "private": true,
+  "dependencies": {
+    "bluebird": "^3.4.1",
+    "bootstrap": "^3.3.6",
+    "bootswatch": "^3.3.6",
+    "classnames": "^2.2.3",
+    "falcor": "^0.1.16",
+    "falcor-http-datasource": "^0.1.3",
+    "font-awesome": "^4.6.1",
+    "gemini-scrollbar": "^1.2.9",
+    "jsuri": "^1.3.1",
+    "load-script": "^1.0.0",
+    "lodash": "^4.3.0",
+    "md5": "^2.0.0",
+    "moment": "^2.10.6",
+    "react": "^0.14.2",
+    "react-bootstrap": "^0.28.2",
+    "react-dom": "^0.14.2",
+    "react-dropzone": "^3.3.0",
+    "react-gemini-scrollbar": "^2.0.1",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^2.1.0",
+    "redux": "^3.0.4",
+    "redux-actions": "^0.8.0",
+    "redux-form": "^4.1.0",
+    "redux-logger": "^2.0.4",
+    "redux-promise-middleware": "^2.3.1",
+    "redux-thunk": "^1.0.0",
+    "reselect": "^2.0.3",
+    "socket.io-client": "^1.4.8",
+    "validate.js": "^0.9.0",
+    "xhr": "^2.2.0"
+  }
 }
