--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+src/client/node_modules
 
 # VS Code stuff
 /typings
