--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "main": "dist/server/index.js",
   "scripts": {
     "clean": "npm-run-all --parallel \"clean:*\"",
-    "clean:client": "rimraf dist/client",
+    "clean:client": "cd src/client && npm run clean",
     "clean:server": "rimraf dist/server",
     "build": "npm-run-all --parallel build:client \"build:server:*\"",
-    "build:client": "webpack --progress",
+    "build:client": "cd src/client && npm run build",
     "build:server": "npm-run-all --parallel \"build:server:*\"",
     "build:server:js": "babel src/server --out-dir dist/server --source-maps",
     "build:server:resources": "cpx \"src/server/resources/**\" dist/server/resources --verbose",
     "build:server:protos": "cpx \"lib/killrvideo-service-protos/src/**\" dist/server/resources/protos --verbose",
     "build:server:googleprotos": "cpx \"lib/google/**\" dist/server/resources/protos/google --verbose",
-    "watch": "npm-run-all clean --parallel \"build:client -- --watch\" \"build:server:* -- --watch\"",
+    "watch": "npm-run-all clean --parallel \"watch:*\"",
+    "watch:client": "cd src/client && npm run watch",
+    "watch:server": "npm-run-all --parallel \"build:server:* -- --watch\"",
     "postversion": "git push --follow-tags",
     "release:build": "cross-env NODE_ENV=production npm run build",
     "release": "npm-run-all clean release:build",
-    "start": "node dist/server/index.js",
-    "analyze": "webpack --json | webpack-bundle-size-analyzer > webpack-bundle-size-analyzer.log"
+    "start": "node dist/server/index.js"
   },
   "author": "Luke Tillman <luke@luketillman.com> (http://www.luketillman.com)",
   "repository": {
