Added support to use the config module for authentication support Also fixed how I was handling references and an import statement

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -7,3 +7,7 @@ client:
 web:
   session:
     secret: KILLRVIDEO_SESSION_SECRET
+
+cassandra:
+  dseUsername: KILLRVIDEO_DSE_USERNAME
+  dsePassword: KILLRVIDEO_DSE_PASSWORD
