Refactored PoC to Final (No-ETCD)

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -29,3 +29,16 @@ cassandra:
   # Either set these values here directly or use the KILLRVIDEO_DSE_USERNAME and KILLRVIDEO_DSE_PASSWORD environment variables. 
   dseUsername: null
   dsePassword: null
+
+services:
+  web:                    ['web:3000']
+  cassandra:              ['dse']
+  dse-search:             ['dse:8983']
+  UploadsService:         ['backend:50101']
+  RatingsService:         ['backend:50101']
+  CommentsService:        ['backend:50101']
+  SearchService:          ['backend:50101']
+  StatisticsService:      ['backend:50101']
+  VideoCatalogService:    ['backend:50101']
+  UserManagementService:  ['backend:50101']
+  SuggestedVideoService:  ['backend:50101']
